--- a/purchase_Media/views/report_purchaseorder.xml
+++ b/purchase_Media/views/report_purchaseorder.xml
@@ -7,17 +7,17 @@
             <div class="oe_structure"/>
             <div class="row">
                 <div class="col-xs-6">
-                    <strong>Shipping address:</strong>
+                    Expected Delivery address :<br/>
                     <div t-if="o.dest_address_id">
                         <div t-field="o.dest_address_id"
                             t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
                         <p t-if="o.partner_id.vat">VAT: <span t-field="o.partner_id.vat"/></p>
                     </div>
 
-                    <div t-if="not o.dest_address_id and o.picking_type_id and o.picking_type_id.warehouse_id">
+                    <div t-if="o.picking_type_id and o.picking_type_id.warehouse_id">
                         <span t-field="o.picking_type_id.warehouse_id.name"/>
                         <div t-field="o.picking_type_id.warehouse_id.partner_id"
-                            t-field-options='{"widget": "contact", "fields": ["address", "phone", "fax"], "no_marker": true}'/>
+                            t-field-options='{"widget": "contact", "fields": ["address", "name", "phone", "fax"], "no_marker": true}'/>
                         <p t-if="o.partner_id.vat">VAT: <span t-field="o.partner_id.vat"/></p>
                     </div>
                 </div>
@@ -27,16 +27,16 @@
                 </div>
             </div>
 
-            <b><h4 t-if="o.state != 'draft'">Purchase Order Number <span t-field="o.name"/></h4></b>
-            <b><h4 t-if="o.state == 'draft'">Request for Quotation <span t-field="o.name"/></h4></b>
+            <h2 t-if="o.state != 'draft'">Purchase Order Confirmation N°<span t-field="o.name"/></h2>
+            <h2 t-if="o.state == 'draft'">Request for Quotation N°<span t-field="o.name"/></h2>
 
             <div class="row mt32 mb32">
                 <div t-if="o.name" class="col-xs-3">
-                    <strong>Our Order Reference</strong>
+                    <strong>Our Order Reference:</strong>
                     <p t-field="o.name"/>
                 </div>
                 <div t-if="o.partner_ref" class="col-xs-3">
-                    <strong>Supplier Reference</strong>
+                    <strong>Your Order Reference</strong>
                     <p t-field="o.partner_ref"/>
                 </div>
                 <div t-if="o.date_order" class="col-xs-3">
@@ -44,7 +44,7 @@
                     <p t-field="o.date_order"/>
                 </div>
                 <div t-if="o.validator" class="col-xs-3">
-                    <strong>Contact</strong>
+                    <strong>Validated By:</strong>
                     <p t-field="o.validator"/>
                 </div>
             </div>
@@ -54,8 +54,8 @@
                     <tr>
                         <th><strong>Description</strong></th>
                         <th><strong>Taxes</strong></th>
-                        <th class="text-center"><strong>Date Required</strong></th>
-                        <th class="text-right"><strong>Quantity</strong></th>
+                        <th class="text-center"><strong>Date Req.</strong></th>
+                        <th class="text-right"><strong>Qty</strong></th>
                         <th class="text-right"><strong>Unit Price</strong></th>
                         <th class="text-right"><strong>Net Price</strong></th>
                     </tr>
@@ -90,7 +90,7 @@
                 <div class="col-xs-4 pull-right">
                     <table class="table table-condensed">
                         <tr class="border-black">
-                            <td><strong>Net Total</strong></td>
+                            <td><strong>Total Without Taxes</strong></td>
                             <td class="text-right">
                                 <span t-field="o.amount_untaxed"
                                     t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
@@ -104,7 +104,7 @@
                             </td>
                         </tr>
                         <tr class="border-black">
-                            <td><strong>Grand Total</strong></td>
+                            <td><strong>Total</strong></td>
                             <td class="text-right">
                                 <span t-field="o.amount_total"
                                     t-field-options='{"widget": "monetary", "display_currency": "o.pricelist_id.currency_id"}'/>
